@@ -1,5 +1,10 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.612 2006/04/25 17:13:28 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.613 2006/04/25 18:33:44 wolf31o2 Exp $
+
+  25 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/create-iso.sh:
+  Added patch from Gustavo Zacharias <gustavoz@gentoo.org> for some fun
+  silo-fu on SPARC.
 
   25 Apr 2006; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py:
